Fix elements inside main-content were out of place
Elements with position absolute inside main-content were being shown in
wrong place, like text-editor-sidebar

(cherry picked from commit 7ec5240f427d2a7fec9772c30d406339ebe6d1ef)

--- a/public/designs/themes/base/style.css
+++ b/public/designs/themes/base/style.css
@@ -298,10 +298,9 @@ body, th, td, input {
   border-color: #babdb6;
   border-width: 1px;
   border-radius: 10px;
-
   box-shadow: 1px 1px 2px #888888;
-
   padding: 10px 20px;
+  position: relative;
 }
 
 #content .main-block h1, #not-found h1, #access-denied h1 {
